--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "license": "MIT",
     "scripts": {
-        "start": "vite",
+        "start": "vite --port 5555 --host",
         "build": "vite build"
     },
     "dependencies": {
